<resources>

    <string name="app_name">NestCart</string>

    <!-- string resources login activity -->
    <string name="email_or_user">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>

    <!-- string resources signup activity -->
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="reconfirm">Reconfirm Password</string>
    <string name="already">Already have an account?</string>
    <string name="signup_underline"><u>Log In</u></string>
    <string name="tagline">Nest Your Cart. List Your Heart.</string>

    <!-- string resources name activity -->
    <string name="next">NEXT</string>
    <string name="name_string1">Choose Name</string>
    <string name="name_string2">You can always change it later</string>
    <string name="name">Name</string>

    <!-- string resources main activity -->
    <string name="hi">Hi</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="group">Groups</string>
    <string name="profile">Profile</string>

    <!-- string resources profile activity -->
    <string name="profileSettings">Profile Settings</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="favourite">Favourite</string>
    <string name="support">Support</string>
    <string name="contact">Contact Us</string>
    <string name="web">Website</string>
    <string name="login1">Login</string>
    <string name="switch_account">Switch Account</string>
    <string name="logout">Logout</string>

    <!-- string resources profile activity -->
    <string name="edit">Edit Profile</string>
    <string name="save">Save Profile</string>
    <string name="back_button_description">Navigate back</string>

    <!-- string resources create group activity -->
    <string name="create_group">Create a group</string>
    <string name="done">Done</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="group_name">Group Name</string>

    <!-- string resources single group activity -->
    <string name="last">last edited</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recycler_view_description">List of supermarkets</string>
    <string name="select_the_mart_you_want_to_shop_at">Please select the mart you want to shop at</string>
    <string name="your_shopping_route" />
    <string name="supermarket_map_image" />
    <string name="supermarket_name" />
    <string name="previouscapitalized">PREVIOUS</string>

</resources>