<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- TextView for displaying the supermarket name -->
    <TextView
        android:id="@+id/supermarket_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supermarket_name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <ImageView
        android:id="@+id/supermarket_map_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/supermarket_map_image" />

    <TextView
        android:id="@+id/route_instruction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_shopping_route"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/step_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="Step 1: Loading..."
        android:background="@android:color/darker_gray"/>

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/previouscapitalized"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white" />
    <TextView
        android:id="@+id/item_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:padding="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="gone" />


</LinearLayout>
