<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/settings_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/profileSettings"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/general"
            android:textColor="@color/heading_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/generalCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_title" />

        <androidx.cardview.widget.CardView
            android:id="@+id/generalCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/general"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">

                <TextView
                    android:id="@+id/settings"
                    android:layout_width="match_parent"
                    android:gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:background="@drawable/state_background"/>

                <TextView
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:background="@drawable/state_background"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/support"
            android:textColor="@color/heading_grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/generalCard" />

        <androidx.cardview.widget.CardView
            android:id="@+id/settingsCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/support"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/contact"
                    android:layout_width="match_parent"
                    android:gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/contact"
                    android:textColor="@color/black"
                    android:background="@drawable/state_background"/>

                <TextView
                    android:id="@+id/web"
                    android:layout_width="match_parent"
                    android:gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/web"
                    android:textColor="@color/black"
                    android:background="@drawable/state_background"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/login1"
            android:textColor="@color/heading_grey"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsCard"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/switchAccount"
                    android:layout_width="match_parent"
                    android:gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/switch_account"
                    android:textColor="@color/black"
                    android:background="@drawable/state_background"/>

                <TextView
                    android:id="@+id/logout"
                    android:layout_width="match_parent"
                    android:gravity="start|center"
                    android:layout_marginStart="10dp"
                    android:layout_height="40dp"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:background="@drawable/state_background"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>