<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/soft_gray"
    tools:context="activities.SignupActivity">

    <ImageView
        android:id="@+id/signup_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:src="@drawable/groceries_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:text="@string/tagline"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:textColor="@color/muted_gray"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/layout"
        app:layout_constraintTop_toBottomOf="@+id/signup_logo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/signup_tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/muted_border">

            <TextView
                android:id="@+id/signup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@color/deep_blue"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/muted_border"
                android:layout_marginTop="10dp"
                android:padding="15dp"
                android:hint="@string/email"
                android:textColorHint="@color/light_greyish_blue"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/muted_border"
                android:layout_marginTop="15dp"
                android:padding="15dp"
                android:hint="@string/username"
                android:textColorHint="@color/light_greyish_blue"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/muted_border"
                android:hint="@string/password"
                android:padding="15dp"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/signup_reconfirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/muted_border"
                android:hint="@string/reconfirm"
                android:textColorHint="@color/light_greyish_blue"
                android:padding="15dp"
                android:singleLine="true"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:padding="5dp"
                android:text="@string/signup"
                android:textSize="18sp"
                android:textStyle="bold"
                android:backgroundTint="@color/bright_teal"
                app:cornerRadius="10dp"
                style="@style/Widget.MaterialComponents.Button"/>




        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>